--- a/client/src/style/loginstyle.css
+++ b/client/src/style/loginstyle.css
@@ -114,6 +114,8 @@ img{
   display: flex;
   justify-content: flex-end;
   margin-bottom: 20px;
+  text-decoration: underline;
+  size: 16px;
 }
 
 .btn.login-button{
@@ -125,6 +127,14 @@ img{
   font-size: 16px;
   border-radius: 25px;
   width: 130px;
+}
+.offscreen{
+  font-size: 0px;
+}
+.errmsg{
+  color: red;
+  font-weight: bold;
+  align-self: center;
 }
 
 .btn.login-button:hover{
