login and auth done + routing

--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -153,6 +153,23 @@ img{
   font-weight: normal;
 }
 
+/* admin styles go after this comment */
+
+/* admin navbar styles go after this comment */
 
 
 
+
+/* student styles go after this comment */
+
+
+
+
+/* career center styles go after this comment */
+
+
+
+
+
+
+/* coordinator styles go after this comment */
