--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -4,14 +4,16 @@
     margin: 0;
     padding: 0;
   }
-  
+
   body {
-    background-color: #E3E3E3;
+  background-color: #eff6fc ;
     margin: 0;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   }
   
-  
+.header-title{
+  color: #023047;
+}
  .container {
   display: flex;
   flex-direction: row;
@@ -162,10 +164,10 @@ img{
 /* admin navbar styles go after this comment */
 .sidebar
 {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  height: 100vh;
+  height: 100%;
   width:80px;
   background-color:white ;
   padding: .4rem .8rem;
@@ -173,12 +175,15 @@ img{
 }
 .sidebar.active ~ .main-content
 {
+  height: 100%;
+
   left: 250px;
   width: calc(100% - 250px);
 }
 
 .sidebar.active
 {
+  height: 100%;
   width: 250px;
 }
 
@@ -318,8 +323,9 @@ img{
 }
 
 .main-content{
+  display: flex;
+  flex-direction: column;
   position: relative;
-  background-color: #eff6fc ;
   min-height: 100vh;
   top: 0;
   left: 80px;
@@ -327,6 +333,159 @@ img{
   width: calc(100% - 80px); 
   padding: 1rem;
 }
+
+.welcome-card .message-reciever{
+  color: #023047;
+  font-weight: bold;
+}
+.welcome-card .welcome-text{
+  margin-bottom: 5px;
+}
+.welcome-card{
+  display: block;
+  width: 65%;
+  background-color: #E8F7FB;
+  margin-top: 30px;
+  margin-left: 50px;
+  padding: 15px;
+  border-radius: 10px;
+  border: 1px solid #C8C8C8;
+  box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.2);
+}
+@media only screen and (max-width: 768px) {
+  .welcome-card {
+    display: none;
+  }
+}
+.info-cards{
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.card {
+  margin-top: 80px;
+  position: relative;
+  width: 200px;
+  height: 150px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  overflow: visible;
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+
+}
+
+.circle {
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  height: 100px;
+  background-color: #023047;
+  border-radius: 100%;
+}
+.circle2{
+  display: flex;
+  justify-content: center;
+  top: -47.5px;
+  width: 96px;
+  height: 96px;
+  background-color: #26308C;
+}
+
+.content {
+  position: relative;
+  top: 30px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+  text-align: center;
+  align-items: center;
+}
+.card-value h2{
+  color: white;
+}
+.card-title p{
+  color: white;
+}
+.more-info {
+  display: flex;
+  align-content: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 35px; /* adjust height as needed */
+  background-color: rgba(255, 255, 255, 0.8); /* set background color and transparency */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  border-radius: 10px;
+}
+
+.more-info p {
+  margin: 0;
+  font-weight: normal;
+  font-size: 16px;
+  color: white;
+ 
+}
+
+.admin-application-summary
+{
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  flex-direction: column;
+}
+.styled-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+.styled-table thead tr {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: left;
+}
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+.styled-table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+}
+.styled-table tbody tr.active-row {
+  font-weight: bold;
+  color: #009879;
+}
+
+.approve-rejected{
+  color: red;
+  font-weight: bold;
+  font-size: 16px;
+}
+.sidebar.active {
+  color: red;
+}
+
+
 /* student styles go after this comment */
 
 
