--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -83,6 +83,26 @@ img{
   text-align: center;
 }
 
+.shake {
+  animation: shake 0.5s;
+  animation-iteration-count: 1;
+}
+
+@keyframes shake {
+  0% { transform: translate(0, 0); }
+  10% { transform: translate(-10px, 0); }
+  20% { transform: translate(10px, 0); }
+  30% { transform: translate(-10px, 0); }
+  40% { transform: translate(10px, 0); }
+  50% { transform: translate(-10px, 0); }
+  60% { transform: translate(10px, 0); }
+  70% { transform: translate(-10px, 0); }
+  80% { transform: translate(10px, 0); }
+  90% { transform: translate(-10px, 0); }
+  100% { transform: translate(0, 0); }
+}
+
+
 /* form box */
 .login-box .user-box {
   position: relative;
@@ -96,6 +116,17 @@ img{
   margin-bottom: 30px;
   outline: none;
 }
+
+.shake input{
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: black;
+  margin-bottom: 30px;
+  outline: none;
+  border: 1px solid red;
+}
+
 /*login page input field label */
 .login-box .user-box label {
   position: relative;
@@ -139,8 +170,9 @@ img{
 }
 .errmsg{
   color: red;
-  font-weight: bold;
+  font-weight: 500;
   align-self: center;
+  margin-bottom: 15px;
 }
 
 .btn.login-button:hover{
@@ -157,6 +189,9 @@ img{
   margin-top: none;
   font-size: 16px;
   font-weight: normal;
+}
+.last{
+  margin-bottom: 50px;
 }
 
 /* admin styles go after this comment */
@@ -236,8 +271,10 @@ img{
 .user .bold em{
  font-style: normal;
 }
-.bold{
-  font-weight: 600;
+
+#userID{
+  color:#023047;
+  font-weight: bold;
 }
 
 .sidebar p 
@@ -253,6 +290,8 @@ img{
   opacity: 1;
   margin: auto;
   font-size: 1.3rem;
+  font-weight: bold;
+  color: #023047;
 }
 .sidebar.active .user .initials  
 {
@@ -300,6 +339,7 @@ img{
 {
   opacity: 1;
 }
+
 .sidebar ul li .tooltip
 {
   position: absolute;
@@ -334,7 +374,7 @@ img{
   padding: 1rem;
 }
 
-.welcome-card .message-reciever{
+.welcome-card .message-recipient{
   color: #023047;
   font-weight: bold;
 }
@@ -398,7 +438,8 @@ img{
 
 .content {
   position: relative;
-  top: 30px;
+  bottom: 0px;
+  top: 35px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -481,12 +522,164 @@ img{
   font-weight: bold;
   font-size: 16px;
 }
+.approved {
+  color: green;
+  font-weight: bold;
+}
+
+.rejected
+{
+  color: #e60000; /* This is a nice shade of red */
+  font-weight: bold;
+}
+.pending{
+  color: orange; 
+  font-weight: bold;
+}
+
 .sidebar.active {
   color: red;
+}
+.pagination-tab{
+  display: flex;
+  justify-content: center;
+  margin-top : 10px;
+  margin-bottom: 20px;
 }
 
 
 /* student styles go after this comment */
+.request-cards-row
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.request-card {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 1rem;
+  margin: 1rem;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.request-card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-size: 1rem;
+  line-height: 1.5;
+  margin-bottom: 1rem;
+  align-items: center;
+}
+
+.request-card-buttons {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.request-card-buttons button {
+  margin-left: 0.5rem;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 8px;
+  background-color: #007aff;
+  color: #fff;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.request-card-buttons button:hover {
+  background-color: #0061a8;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 1em 0;
+}
+
+th,
+td {
+  text-align: left;
+  padding: 0.5em;
+}
+
+th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:hover {
+  background-color: #e6f7ff;
+}
+
+td button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 0.5em;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 0 0.25em;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+td button[disabled] {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+#pagination {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1em 0;
+  padding: 0;
+}
+
+#pagination li {
+  margin: 0 0.5em;
+  padding: 0.25em;
+  border-radius: 3px;
+  cursor: pointer;
+  background-color: #fff;
+  border: 1px solid #ddd;
+}
+
+#pagination li.active {
+  background-color: #4CAF50;
+  color: #fff;
+  border: none;
+}
+.table-container {
+  margin-top: 10px;
+}
+.table-container-min-height {
+  min-height: 200px;
+}
+
+.table-container-2 {
+  margin-top: 50px;
+}
+
 
 
 
