--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -549,6 +549,7 @@ img{
 
 
 /* student styles go after this comment */
+
 .request-cards-row
 {
   display: flex;
@@ -591,7 +592,7 @@ img{
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 8px;
-  background-color: #007aff;
+  background-color: #10185E;
   color: #fff;
   font-size: 1rem;
   cursor: pointer;
@@ -692,3 +693,394 @@ td button[disabled] {
 
 
 /* coordinator styles go after this comment */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* inbox styles go after this comment */
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: white;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+  padding: 10px 20px;
+  z-index: 100;
+  height: 80px;
+}
+
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-search {
+  display: flex;
+  align-items: center;
+  border: 1px solid whitesmoke;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: transparent;
+}
+
+.header-search-icon {
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+  color: #a0aec0;
+}
+
+
+.header-profile {
+  display: flex;
+  align-items: center;
+}
+
+.header-profile-icon {
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+  color: #a0aec0;
+}
+
+.header-profile-text {
+  font-weight: bold;
+}
+
+.search-input {
+  background-color: white; /* set the background color to match the header background color */
+  border: none; /* remove the border */
+  padding: 10px; /* add some padding to make it more visually appealing */
+  border-radius: 5px; /* add rounded corners */
+  width: 250px; /* set the width of the input field */
+}
+
+
+.search-input:focus {
+  outline: none; /* remove the focus outline */
+}
+.message-main-container
+{
+  display: flex;
+  flex-direction: row;
+  height: calc(95vh - 60px);
+
+}
+.inbox-container {
+  margin-top: 68px;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  border-right: 1px solid #d4d4d4;
+  height: 100%;
+  width: 40%;
+  overflow-y: scroll;
+  padding: 20px;
+}
+.header-compose{
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 20px;
+  background-color: #10185E;
+  width: auto;
+  height: auto;
+  padding: 10px;
+  border-radius: 10px;
+}
+.header-compose .compose-message{
+  color:white;
+  font-family: Segoe UI;
+}
+.header-compose:hover{
+  background-color: #0066cc;
+}
+.inbox-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.inbox-header-title {
+  display: flex;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #4f4f4f;
+}
+
+.inbox-header-title span {
+  margin-left: 10px;
+}
+.inbox-message.unread {
+  background-color: #f5f5f5; /* Change to your desired color */
+  font-weight: bold; /* Add bold text to make it stand out */
+}
+
+
+.inbox-header-messages {
+  display: flex;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #4f4f4f;
+}
+
+.inbox-header-message-count {
+  background-color: #10185E;
+  color: #fff;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+}
+
+.inbox-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.inbox-message {
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  border: 1px solid grey;
+}
+.inbox-message.unread {
+  background-color: #c4c4c4; /* Change to your desired color */
+  font-weight: bold; /* Add bold text to make it stand out */
+}
+
+.inbox-message:hover {
+  background-color: #ebebeb;
+}
+
+.inbox-message-sender-time {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.inbox-message-sender {
+  font-size: 1rem;
+  font-weight: 600;
+  color: #4f4f4f;
+}
+
+.inbox-message-time {
+  font-size: 0.8rem;
+  color: #9e9e9e;
+}
+
+.inbox-message-title {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #4f4f4f;
+  margin-bottom: 5px;
+}
+
+.inbox-message-content {
+  font-size: 1rem;
+  color: #4f4f4f;
+  line-height: 1.4;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.message-container {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin-left: 10px;
+}
+
+
+.message-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+.message-header-title {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.message-header-date {
+  font-size: 14px;
+  color: #666;
+}
+
+.message-content {
+  margin-top: 20px;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.message-attachments {
+  margin-top: 20px;
+}
+
+.message-attachment-link {
+  display: block;
+  margin-bottom: 10px;
+  color: #0066cc;
+  text-decoration: none;
+}
+
+.message-attachment-link:hover {
+  text-decoration: underline;
+}
+.attachment {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: left;
+  padding: 5px;
+}
+
+
+.attachment button {
+  margin-left: 10px;
+}
+
+
+.message-reply-button {
+  margin-top: 20px;
+  align-self: flex-end;
+  background-color: #10185E;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer; 
+}
+
+.message-reply-button:hover {
+  background-color: #0066cc;
+}
+.message-sender{
+  color: #023047;
+  font-weight: bolder;
+  font-size: 24px;
+}
+.message-title{
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-container {
+  background-color: #fff;
+  padding: 1rem;
+  width: 500px;
+  max-width: 90%;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.modal-close {
+  background-color: transparent;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.form-group {
+  margin-bottom: 1rem;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+select,
+input[type="text"],
+textarea,
+input[type="file"] {
+  display: block;
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+select:focus,
+input[type="text"]:focus,
+textarea:focus,
+input[type="file"]:focus {
+  outline: none;
+  border-color: #007bff;
+}
+
+.btn-compose {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  cursor: pointer;
+  background-color: #10185E;
+  color: #fff;
+  border: none;
+}
+
+
+
+
+.btn-primary {
+  background-color: #10185E;
+  color: #fff;
+}
+
+.btn-primary:hover {
+  background-color: #0069d9;
+}
+
+
