--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -350,6 +350,10 @@ img{
   color: #023047;
   font-weight: bold;
 }
+.bold-errmsg {
+  color: #c82333;
+  font-weight: bold;
+}
 
 .user .bold {
   color: #023047;
@@ -1274,6 +1278,97 @@ label[for="location"] {
 /* coordinator styles go after this comment */
 
 /* RequestViewer.css */
+/* Modal Container */
+.rejection-reason-coordinator {
+  margin: 10px 0;
+}
+
+.coordinator-rejection-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 400px;
+  max-width: 80%;
+  padding: 20px;
+  border-radius: 4px;
+  z-index: 9999;
+}
+
+/* Overlay */
+.ReactModal__Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9998;
+}
+
+/* Modal Title */
+.coordinator-rejection-modal-h3 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+/* Modal Input */
+.coordinator-rejection-modal-input {
+  width: 100%;
+  height: 120px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: none;
+  margin-bottom: 10px;
+}
+
+/* Modal Buttons */
+.coordinator-rejection-modal-btn {
+  padding: 10px 20px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 10px;
+  transition: background-color 0.3s ease;
+  margin: 10px;
+}
+
+.coordinator-rejection-modal-btn:hover {
+  background-color: #0056b3;
+}
+
+.coordinator-rejection-modal-btn {
+  margin-right: 0;
+  background-color: #dc3545;
+}
+
+.coordinator-rejection-modal-btn:hover {
+  background-color: #c82333;
+}
+.coordinator-rejection-modal-btn-confirm {
+  padding: 10px 20px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 10px;
+  transition: background-color 0.3s ease;
+  margin-right: 0;
+  background-color: #4CAF50;
+}
+
+.coordinator-rejection-modal-btn-confirm:hover {
+  background-color: #43a346;
+}
 
 .coordinator-container {
   margin: 20px;
@@ -1368,22 +1463,59 @@ label[for="location"] {
 }
 /* Button Colors */
 .button-approve {
-  background-color: green;
+  background-color: #4CAF50;
+  color: white;
+}
+.button-approve:hover {
+  background-color: #43a346;
   color: white;
 }
 
 .button-delete {
-  background-color: red;
+  background-color: #dc3545;
+  color: white;
+}
+.button-delete:hover {
+  background-color: #c82333;
   color: white;
 }
 
 /* Status Colors */
 .status-pending {
-  color: orange;
+  color: #ff9800;
 }
 
 .status-approved {
-  color: green;
+  color: #4caf50;
+}
+.status-completed{
+  color: #2196f3;
+}
+
+.status-change {
+  animation-name: statusChange;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes statusChange {
+  0% {
+    background-color: transparent;
+  }
+  50% {
+    background-color: yellow;
+  }
+  100% {
+    background-color: transparent;
+  }
+}
+
+.coordinator-send-forms
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 30px;
 }
 
 .status-rejected {
