--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -147,10 +147,11 @@ img{
 .password-icon {
   position: absolute;
   right: 5px;
-  top: 50%;
+  top: 55%;
   transform: translateY(-50%);
   cursor: pointer;
 }
+
 
 .forgot-password{
   display: flex;
@@ -710,6 +711,7 @@ img{
   transform: translateY(-2px);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
+
 
 .tab--selected {
   background-color: #10185E;
@@ -1789,7 +1791,9 @@ label[for="location"] {
   line-height: 1;
   font-weight: bold;
 }
-
+.notification{
+  cursor: pointer;
+}
 .notification-modal {
   width: 500px;
   max-height: 600px;
@@ -1888,6 +1892,25 @@ label[for="location"] {
   background-color: #e0e0e0;
 }
 
+.inbox-empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-size: 24px;
+  font-weight: bold;
+  color: #888;
+}
+.message-empty{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-size: 24px;
+  font-weight: bold;
+  color: #888;
+}
+
 .inbox-message.received {
   background-color: #f5f5f5;
 }
@@ -1900,6 +1923,7 @@ label[for="location"] {
   border-radius: 50%;
   margin-left: 4px;
 }
+
 
 /* Adjust the styles based on your design preferences */
 
@@ -1918,7 +1942,7 @@ label[for="location"] {
 
 .header-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: end;
   align-items: center;
 }
 
@@ -2269,6 +2293,12 @@ label[for="location"] {
   max-width: 90%;
   border-radius: 0.5rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.users-table-admindash{
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 25px;
 }
 
 .modal-header {
