--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -73,11 +73,15 @@ img{
 }
 
 .login-box {
-  width: 400px;
+  
   padding: 40px;
   box-sizing: border-box;
   box-shadow: 0 10px 20px rgba(0,0,0,.6);
   border-radius: 10px;
+}
+.login-section .login-box{
+  background-color: #ffffff;
+  width: 400px;
 }
 
 
@@ -757,6 +761,16 @@ img{
 }
 
 .create-department-form input[type="text"],
+.create-department-form textarea {
+  width: 100%;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  font-family: inherit;
+}
+.create-department-form input[type="password"],
 .create-department-form textarea {
   width: 100%;
   padding: 0.5rem;
